[project]
name = "llm-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "trl==0.19.1",
    "unsloth>=2025.7.2",
    "unsloth-zoo>=2025.7.4",
    "wandb>=0.21.1",
]
